--- a/entries/entry_1.html
+++ b/entries/entry_1.html
@@ -1,4 +1,6 @@
-##[07-Nov-2287] <strong>My Mister Handy</strong> asked me if I considered him family...
+##[07-Nov-2287] My Mister Handy asked me if I considered him family...
+
+### GREAT success!!
 
 * ...and I answered 'yes'. I think I meant it, too. I mean, he's literally the last piece of my old life - he's the only one that 'remembers' any of it. The wastelanders, they don't get it; what do they see when they look up at the pre-war flag I hung up over the checkpoint. Why is there an armed checkpoint on my front lawn? The commonwealth wasteland is doing weird shit to my head. 
 
