--- a/entries/entry_1.html
+++ b/entries/entry_1.html
@@ -1,7 +1,8 @@
-## [07-Nov-2287] My Mister Handy asked me if I considered him family...
+## [07-Nov-2287] <em>My Mister</em> Handy asked me if I considered him family...
 
 
-* ...and I answered 'yes'. I think I meant it, too. I mean, he's literally the last piece of my old life - he's the only one that 'remembers' any of it. The wastelanders, they don't get it; what do they see when they look up at the pre-war flag I hung up over the checkpoint. Why is there an armed checkpoint on my front lawn? The commonwealth wasteland is doing weird shit to my head. 
+
+* ...and I _answered_ 'yes'. I think I meant it, too. I mean, he's literally the last piece of my old life - he's the only one that 'remembers' any of it. The wastelanders, they don't get it; what do they see when they look up at the pre-war flag I hung up over the checkpoint. Why is there an armed checkpoint on my front lawn? The commonwealth wasteland is doing weird shit to my head. 
 
 * **[09-Nov-2287]** Dear diary, today I spent four hours in a tin shed, pinned under near-constant gatling laser fire. Naturally, I didn't have my suit. Every thirty seconds or so, the sentry bot would pause to re-arm and re-target, during which period I would stick my head around the corner and ping it with my pathetically inappropriate pipe pistol. I actually couldn't stop laughing by the end of it. Like, I wanted to, but I couldn't stop. Not the first time, either.
 
